--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "license": "MIT",
   "icon": "icon.png",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "engines": {
-    "vscode": "^1.91.0"
+    "vscode": "^1.91.0"[
   },
   "categories": [
     "Other"
